Thu Sep 17 12:23:39 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Process_Semaphore.h
        * ace/Thread_Semaphore.h
        * ace/Atomic_Op.h
        * ace/Condition_Recursive_Thread_Mutex.h
        * ace/Null_Mutex.h
          Doxygen fixes

Wed Sep 16 18:44:39 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/bmake.features:
        * bin/MakeProjectCreator/config/em3.features:
        * bin/MakeProjectCreator/config/global.features:
        * bin/MakeProjectCreator/config/gnuace.features:
        * bin/MakeProjectCreator/config/nmake.features:
        * bin/MakeProjectCreator/config/vc71.features:
        * bin/MakeProjectCreator/config/vc8.features:
        * bin/MakeProjectCreator/config/vc9.features:
          Removed cidl, that feature has been removed with 1.7.2

        * bin/MakeProjectCreator/config/vc10.features:
          New file for vc10

        * bin/MakeProjectCreator/config/gnuace.features:
          Set ndds=1 by default, at the end enabling ndds
          is then controlled through the platform_macros.GNU File

Wed Sep 16 10:54:39 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_signal.inl:
        * ace/config-win32-cegcc.h:
        * ace/config-win32-mingw.h:
          Removed use of ACE_LACKS_SIGSET_DEFINITIONS macro. It seems that
          this macro was left over from the past.

Wed Sep 16 07:25:26 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_signal.h:
          Fix for platforms that lack sigsets.

Wed Sep 16 06:27:45 UTC 2009  Olli Savia  <ops@iki.fi>

        * include/makeinclude/platform_freebsd.GNU:
          Fixed typo in PLATFORM_TCL_LIBS.

Tue Sep 15 20:33:47 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_signal.h:
        * ace/OS_NS_signal.inl:
        * ace/README:
        * ace/config-cray.h:
        * ace/config-macosx-leopard.h:
        * ace/config-macosx-panther.h:
        * ace/config-macosx-tiger.h:
        * ace/config-macosx.h: